recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: value -- is not a member of Int
		levels--;
                      ^